@@ -1,3 +1,8 @@
+2002-02-05  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/*: cut/copy/paste operations. probably behaves strangely at
+	times and may even crash occasionally... needs some polishing.
+
 2001-11-13  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/gtkhex.c: added block marking and clipboard handling.
